Refactor code and configured the signing for the debug version for emulator too

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,6 +63,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            signingConfig signingConfigs.release
+        }
         release {
             // Ensure these are present
             ndk {
