--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,5 +2,6 @@ org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryErro
 android.useAndroidX=true
 android.enableJetifier=true
 # Gradle JVM settings
-org.gradle.java.home=C:/Program Files/Java/jdk-17.0.4.1
+#org.gradle.java.home=C:/Program Files/Java/jdk-17.0.4.1
+org.gradle.java.home=F\:/Program Files/Java/jdk-17
 
