--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fluttertoast: ^8.0.9
   file_picker: ^8.1.4
 #  google_sign_in: ^5.0.7
 #  firebase_auth: ^4.10.0
@@ -37,6 +38,7 @@ dependencies:
   google_sign_in: ^6.2.2
   firebase_auth: ^5.3.3
   firebase_core: ^3.8.0
+  package_info: ^2.0.0
 
 
 
@@ -48,6 +50,7 @@ dependencies:
   firebase_storage: ^12.3.6
   firebase_database: ^11.1.6
   firebase_app_installations: ^0.3.1+6
+
 
 dev_dependencies:
   flutter_test:
@@ -72,7 +75,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
