--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -4,4 +4,4 @@ android.enableJetifier=true
 # Gradle JVM settings
 #org.gradle.java.home=C:/Program Files/Java/jdk-17.0.4.1
 org.gradle.java.home=F\:/Program Files/Java/jdk-17
-
+PLAY_KEY_PATH=C\:/Users/asif/diginuance/growr_resources/growr-90b14-4abd769ebe7f.json
